<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/black"
            android:text="@string/btn1_text"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/btn2_text"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/btn3_text"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="331dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/btn4_text"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/black"
            android:text="@string/btn5_text"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="0dp" >

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@color/black"
            android:text="@string/btn5_text"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/btn6_text"
            android:textSize="14dp"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/btn7_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>