<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/buttonLeftTop"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginLeft="2dp"
            android:backgroundTint="@color/black"
            android:text="@string/btnLeftTop" />

        <Button
            android:id="@+id/buttonRightTop"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="210dp"
            android:layout_toEndOf="@+id/buttonLeftTop"
            android:backgroundTint="@color/black"
            android:text="@string/btnRightTop"
            android:textAlignment="center" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="331dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/black"
            android:text="@string/btnLeftCenter" />

        <Button
            android:id="@+id/button9"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_marginLeft="155dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/black"
            android:text="@string/btnCenter" />

        <Button
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/black"
            android:text="@string/btnRightCenter" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        tools:layout_editor_absoluteX="0dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btnBottom"
        android:backgroundTint="@color/black"
        android:layout_marginTop="135dp"
        />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>